<resources>
    <string name="app_name">MyCovid19App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Pacientes</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="covid_19_vaccination_app">Covid 19 Vaccination App</string>
    <string name="start">Start</string>
    <string name="todo">TODO</string>
    <string name="nome_paciente">Nome</string>
    <string name="data_de_nascimento_paciente">Data de Nascimento</string>
    <string name="sexo_paciente">Sexo :</string>
    <string name="data_da_vacina_o">Data da Vacinação :</string>
    <string name="laborat_rio_de_origem">Laboratório de origem :</string>
    <string name="nome_do_paciente">Nome do Paciente :</string>
    <string name="local_de_administra_o">Local de Administração :</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cidade">Cidade</string>
    <string name="local_de_administra_o_Table">Local de Administração</string>
    <string name="sala_da_vacina_o">Sala da vacinação</string>
    <string name="v_lido_at">Válido até</string>
    <string name="quantidade">Quantidade :</string>
    <string name="alterar_paciente">Alterar Paciente</string>
    <string name="novo_paciente">Novo Paciente</string>
    <string name="eliminar_paciente">Eliminar Paciente</string>
    <string name="sexo">Sexo :</string>
    <string name="cancelar1">cancelar</string>
    <string name="guardar">guardar</string>
    <string name="versao">MyCovid19App v. 1.0</string>
    <string name="eliminar_local">eliminar_local</string>
    <string name="alterar_local">alterar_local</string>
    <string name="novo_local">novo_local</string>
    <string name="cidadenova">Cidade</string>
    <string name="local_de_administrao_novo">Local de administração</string>
    <string name="sala_nova">Sala</string>
    <string name="data_no_formato_dd_mm_aaaa">Data no formato dd/mm/aaaa :</string>
    <string name="validade_no_formato_dd_mm_aaaa">Validade no formato dd/mm/aaaa</string>
    <string name="cancelar2">cancelar</string>
    <string name="eliminar_vacina">eliminar_vacina</string>
    <string name="eliminar">eliminar</string>
    <string name="cancelar3">cancelar</string>
    <string name="cancelar4">cancelar</string>
    <string name="guardar2">guardar</string>
    <string name="senha">Senha</string>
    <string name="vers_o_1_0">Versão: 1.0</string>
    <string name="bem_vindo">Bem Vindo</string>
    <string name="registrar">Registrar</string>
    <string name="entrar">Entrar</string>
    <string name="e_mail">E-mail</string>
    <string name="Vacceli">Vacinação eliminada com sucesso</string>
    <string name="Vaccelierro">Erro ao eliminar Vacinação</string>
    <string name="Can_sucess">Cancelado com sucesso</string>
    <string name="loc_elm_erro">Erro ao eliminar local</string>
    <string name="loc_elm_succ">Local eliminado com sucesso</string>
    <string name="pac_edit_erro">Erro ao alterar paciente</string>
    <string name="pac_edit_succ">Paciente Alterado com sucesso</string>
    <string name="loc_edit_err">Erro ao alterar local</string>
    <string name="loc_edit_succ">Local alterado com sucesso</string>
    <string name="vac_edit_err">Erro a alterar vacina</string>
    <string name="vac_edit_succ">Vacina alterada com sucesso</string>
    <string name="Preencha">Preencha!!</string>
    <string name="vacc_edit_err">Erro ao editar vacinação</string>
    <string name="vacc_edit_succ">Vacinação alterada com sucesso</string>
    <string name="pac_elim_err">Erro ao eliminar paciente</string>
    <string name="pac_elim_succ">Paciente eliminado com sucesso</string>
    <string name="vac_elim_err">Erro Eliminar Vacina</string>
    <string name="vac_elim_succ">Vacina Eliminada com sucesso</string>
    <string name="loc_ins_err">\"Erro ao inserir local \"</string>
    <string name="loc_ins_succ">Local gravado com sucesso</string>
    <string name="pac_ins_err">\"Erro ao inserir paciente \"</string>
    <string name="pac_ins_succ">Paciente gravado com sucesso</string>
    <string name="vac_ins_err">Erro ao inserir vacina</string>
    <string name="vac_ins_succ">Vacina guardada com sucesso</string>
    <string name="vacc_ins_err">Erro ao inserir vacinação</string>
    <string name="vacc_ins_succ">Vacinação criada com sucesso</string>
    <string name="login">Login</string>
</resources>