<?xml version="1.0" encoding="utf-8"?>

    <menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.example.mycovid19app.MainActivity">
    <item
        android:icon="@drawable/ic_baseline_add"
        android:title="@string/novo_paciente"
        app:showAsAction="always" />
        <item
            android:icon="@android:drawable/ic_menu_delete"
            android:title="@string/eliminar_paciente"
            app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings" />
    <item
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/alterar_paciente"
        app:showAsAction="always" />
</menu>
