<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/action_novo_local"
        android:icon="@drawable/ic_baseline_add"
        android:title="@string/novo_local"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_alterar_local"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/alterar_local"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_eliminar_local"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/eliminar_local"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>